@@ -4,4 +4,6 @@ class Author < ActiveRecord::Base
   def name
     "#{last_name}, #{first_name}"
   end
+
+  netzke_attribute :name
 end
